IND - Fix  product name text-align.

--- a/skin/frontend/indexliving/default/css/styles.css
+++ b/skin/frontend/indexliving/default/css/styles.css
@@ -4516,7 +4516,7 @@ body.catalogsearch-result-index .page-title h1 {
   clear: both;
 }
 .products-grid .prolabel-wrapper {position:relative;}
-
+.cms-home .products-grid .prolabel-wrapper{min-height: 200px;}
 .products-grid .product-image {
   max-width: 100%;
   margin-bottom: 15px;
@@ -5154,9 +5154,9 @@ body.catalogsearch-result-index .page-title h1 {
 .block-highlight .flip-container, .block-highlight .flip-container .front, .block-highlight .flip-container .back {
 	width: 100%;
 	height: 100%;
-	min-height:200px;
+	min-height:195px;
 }
-
+.catalog-category-view .block-highlight #alsolike-product-list  .flip-container, .catalog-category-view .block-highlight #recommend-product-list  .flip-container{min-height: 200px;}
 .block-highlight #bestseller-product-list .flip-container, .block-highlight #bestseller-product-list .flip-container .front, .block-highlight #bestseller-product-list .flip-container .back {
 	width: 100%;
 	height: 100%;
